# pia-wg

./: .gitignore  README.md  generate-config.py  piawg.py  pyproject.toml
piawg/: __init__.py  __main__.py  settings.py  wg.conf.template
