[tool.poetry]
name = "piawg"
version = "0.1.0"
description = ""
authors = ["Zachary Juang <zachary822@me.com>"]
readme = "README.md"
packages = [{include = "piawg"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
pick = "^2.2.0"
scapy = "^2.5.0"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
